[package]
name = "lomatia"
version = "0.1.0"
authors = [ "LEARAX <willculhane3@gmail.com>",
            "vpzomtrrfrt <vpzomtrrfrt@gmail.com>" ]
edition = "2018"

[dependencies]
bcrypt = "0.2"
clap = "2.32"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.12"
qstring = "0.6.0"
regex = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-postgres = { version = "0.3", features = ["with-uuid"] }
uuid = { version = "0.5", features = ["v4"] }
