[package]
name = "lomatia"
version = "0.1.0"
authors = [ "LEARAX <willculhane3@gmail.com>",
            "vpzomtrrfrt <vpzomtrrfrt@gmail.com>" ]

[dependencies]
bcrypt = "0.2.0"
clap = "2.31.2"
futures = "0.1"
futures-cpupool = "0.1.8"
hyper = "0.12.1"
lazy_static = "1.0.1"
qstring = "0.6.0"
regex = "1.0.0"
serde_json = "1.0.20"
tokio = "0.1"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "04bd98e", features = ["with-uuid-0.6"] }
uuid = { version = "0.6", features = ["v4"] }

[patch.crates-io]
tokio-uds = { git = "https://github.com/tokio-rs/tokio", rev = "f98b81e" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", rev = "f98b81e" }
