[package]
name = "lomatia"
version = "0.1.0"
authors = [ "LEARAX <willculhane3@gmail.com>",
            "vpzomtrrfrt <vpzomtrrfrt@gmail.com>" ]
edition = "2018"

[dependencies]
bcrypt = "0.2"
clap = "2.32"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.12"
qstring = "0.6.0"
regex = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-uuid-0_7"] }
uuid = { version = "0.7", features = ["v4"] }
tokio = "0.1.19"
bb8 = "0.3.0"
bb8-postgres = "0.3.0"
serde_derive = "1.0.92"
serde = "1.0.92"
